hphp/test/zend/good/ext/sockets/tests/socket_create_listen_params.php.skipif
<?php
    if (!extension_loaded('sockets')) {
        die('skip - sockets extension not available.');
    }
?>