hphp/test/zend/bad/ext/sockets/tests/socket_getpeername_ipv6loop.php.skipif
<?php   
if (!extension_loaded('sockets')) {
	die('skip sockets extension not available.');
}
require 'ipv6_skipif.inc';
?>